--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Roh's Personal Site</title>
+  
+  <style>
+    
+    body {
+          background-color: #e4fbff
+          }
+   
+  </style>
+  
 </head>
 
 <body>
