--- a/index.html
+++ b/index.html
@@ -4,36 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title>Roh's Personal Site</title>
-  
-  <style>
-    
-    body {
-          background-color: #e4fbff
-          }
-   
-  </style>
-  
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="images/tabatha.jpg" height="300" width="300" alt="Pundarika's Teacher"></td>
-      <td><h1>P DHAMMA</h1>
-      <p><em>Founder of <strong><a href="https://jackkornfield.com/finding-the-middle-way/">The Middle Way</a></strong> towards Full Awakening'</em></p>
-      <p>The master of meditation techniques necessary for full awakening.
-        There are but a few who can see the way and, it is for the benefit of such people that I offer up the path. So come along, lets
-      meet and try this out together 🙏 .</p></td>
+      <td>
+        <h1>P DHAMMA</h1>
+        <p><em>Founder of <strong><a href="https://jackkornfield.com/finding-the-middle-way/">The Middle Way</a></strong> towards Full Awakening'</em></p>
+        <p>The master of meditation techniques necessary for full awakening.
+          There are but a few who can see the way and, it is for the benefit of such people that I offer up the path. So come along, lets
+          meet and try this out together 🙏 .</p>
+      </td>
     </tr>
   </table>
 
-  <hr><br>
+  <hr>
   <a href="TrainingSchedule.html">Training Schedule</a>
+  
   <hr>
 
   <h3>Work Experience</h3>
 
-  <table cellspacing="20">
+  <table cellspacing="10">
     <thead>
       <tr>
         <th>Dates</th>
@@ -51,28 +46,53 @@
         <td>Researcher into Mindfulness Training</td>
       </tr>
     </tbody>
+
+    <tfoot>
+
+    </tfoot>
   </table>
+
   <hr>
 
 
-<h3>Skills</h3>
-<table cellspacing="10">
-  <tr>
-      <td>HTML</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-  </tr>
-  <tr>
-      <td>Physics</td>
-      <td>⭐️⭐️⭐️⭐️</td>
-  </tr>
-  <tr>
-      <td>MATHEMATICS</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-  </tr>
-</table>
+  <h3>Skills</h3>
+  <table>
+    <tr>
+      <td>
+        <table cellspacing="10">
+          <tr>
+            <td>HTML</td>
+            <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
+          </tr>
+          <tr>
+            <td>Mathematics</td>
+            <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
+          </tr>
+          <tr>
+            <td>Physics</td>
+            <td>⭐️ ⭐️ ⭐️ ⭐️</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table cellspacing="10">
+          <tr>
+            <td>HTML</td>
+            <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
+          <tr>
+            <td>Mathematics</td>
+            <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
+          </tr>
+          <tr>
+            <td>Physics</td>
+            <td>⭐️ ⭐️ ⭐️ ⭐️</td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
 
-
-<hr>
+  <hr>
 
   <h3>Reading</h3>
   <ol>
